[package]
name = "libertas"
version = "0.2.3"
edition = "2024"
license = "MIT"
description = "Libertas IoT App SDK"
homepage = "https://smartonlabs.com"
repository = "https://github.com/LibertasIoT/libertas-rs"

[dependencies]
hashbrown = { version = "0.16" }
priority-queue = { version = "2.7", default-features = false }
num-traits = { version = "0.2", default-features = false }
num-derive = { version = "0.4" }
num = { version = "0.4", default-features = false, features = [] }
libertas-matter = { version="0.1.2", default-features = false, features = ["alloc"] }

[lib]
name = "libertas"
crate-type = ["rlib"]
