[package]
name = "libertas"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
description = "Libertas IoT App SDK"
repository = "https://github.com/LibertasIoT/libertas-rs"

[dependencies]
hashbrown = { version = "0.16" }
priority-queue = { version = "2.7", default-features = false }

[lib]
name = "libertas"
crate-type = ["rlib"]
