[package]
name = "libertas"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
description = "Libertas App SDK"
repository = "https://github.com/LibertasIoT/libertas-rs"

[dependencies]
hashbrown = { version = "0.16" }
priority-queue = { version = "2.7", default-features = false }
libertas_macros = { path = "../libertas_macros", version="0.2.8" }

[lib]
name = "libertas"
crate-type = ["rlib"]
