[package]
name = "libertas-notification"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
libertas = { path = "../libertas" }
libertas_macros = { path = "../libertas_macros" }

[lib]
name = "libertas_notification"
crate-type = ["rlib"]